--- a/style.css
+++ b/style.css
@@ -1,18 +1,14 @@
-html{
-    /* background-color: brown; */
-}
-
 .project{
-    max-width: 600px;
+    max-width: 200px;
     margin: 10vh auto 0 auto;
-    /* box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1); */
-    background-color: brown;
-    border-radius: 3px;
+    box-shadow: 0px 0px 33px 17px rgba(153, 153, 153, 1);
+    
+
 }
-.cover{
+#cover{
     text-align: right;
-    height: 80px;
-    line-height: 60px;
+    height: 70px;
+    line-height: 70px;
     padding: 16px 8px;
     font-size: 30px;
 }
@@ -21,13 +17,25 @@ html{
     display: grid;
     border-bottom: 1px solid #999;
     border-left: 1px solid #999;
-    grid-template-areas: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.button > div{
+    border-top: 1px solid #999;
+    border-right: 1px solid #999;
 }
 .text{
     border: 0.5px solid #999;
     line-height: 100px;
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     cursor: pointer;
 
+}
+#equal {
+    background-color: #5555ff;
+    color: white;
+}
+.button:hover{
+    /* background-color: #323330; */
+    transition: 0.5s ease-in-out;
 }
